# transcriber

./: .gitignore  Dockerfile  LICENSE  Pipfile  README.md  paru.conf  pyproject.toml
.github/workflows/: docker-build.yaml  docker-build.yml  transcriber.yaml  transcriber.yml  transcripter.yml
scripts/: logger.py  requirements.txt  translate.py
src/: main.py
src/transcriber/: cli.py  constants.py  logger.py  transcribe.py  translate.py  utils.py
trunk/: PKGBUILD-python-llvmlite  PKGBUILD-python-numba
